# sk-2024

./: .gitignore  README.MD  index.html
server/: .gitignore  CMakeLists.txt  chess_rules.c  chess_rules.h  common.h  connection.c  connection.h  game.c  game.h  main.c
src/: ChessPiece.ts  gameboard.ts  main.ts  style.css
